# BMADataPipeline

./: .gitignore
airflow-scrapers/: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  airflow.cfg  airflow.example.cfg  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup_airflow.sh
airflow-scrapers/alembic/: env.py  test_env_runner.py
airflow-scrapers/alembic/versions/: 05b7b3dac1cb_add_unique_key_constraint.py  0d1144717de0_create_a_test_budget_scraper.py  27ebbc3dc32b_create_bangkok_budget.py  378981694e5f_update_timezone.py  45aff862251d_alter_column_in_rain_and_flood_summary_2.py  (+17 more)
airflow-scrapers/config/: airflow.cfg
airflow-scrapers/dags/: bangkok_budget_scraper.py  bangkok_budget_updater.py  canal_dredging_scraper.py  rainfall_and_flood_summary_scraper.py  rainfall_sensor_scraper.py  riskpoint_scraper.py  road_flood_sensor.py  road_flood_sensor_location.py  road_flood_sensor_scraper.py  sewarage_dredging_scraper.py  sewerage_dredging_scraper.py  traffy_fondue_citizen_complaint_scraper.py
airflow-scrapers/include/: api_utils.py  superset_utils.py
airflow-scrapers/models/: models.py
airflow-scrapers/utils/: api_utils.py  bangkok_districts.py  buddhist_year_converter_utils.py  budget.py  canal_and_sewarage_scraper.py  canals_translation_map_utils.py  db_utils.py  distance_calculation_service.py  distance_calculation_utils.py  enrich_risk_points.py  geocoding_service_utils.py  rainfall_and_flood_summary_utils.py  test.py  translation_ner.py  translation_ner_geocoding.py  upload_csv.py
(+9 files in other folders)
