[project]
name = "airflow-scrapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "airflow",
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.3",
    "retrying>=1.3.4",
]
